[package]
name = "bedrockrs_nbt"
version = "0.1.0"
edition = "2021"
authors = ["Ruben Adema"]
repository = "https://github.com/bedrock-crustaceans/bedrockrs-nbt"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
paste = "1.0.15"
thiserror = "1.0.63"
byteorder = "1.5.0"
varint-rs = "2.2.0"
