[package]
name = "nbtx"
description = "A high-performance, ergonomic, pure Rust implementation of the Named Binary Tag format"
version = "2.0.1"
edition = "2024"
authors = ["Ruben Adema", "theaddonn <theaddonn@gmail.com>"]
repository = "https://github.com/bedrock-crustaceans/bedrockrs-nbt"
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[features]
snbt = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
paste = "1.0"
thiserror = "2.0"
byteorder = "1.5"
varint-rs = "2.2"

[[example]]
name = "hello_world"
